--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 </div>
 </section> -->
 
-<!-- <div class="dont bloc l-bloc bgc-white padl padr" id="bloc-6">
+<div class="dont bloc l-bloc bgc-white padl padr" id="bloc-6">
 	<div class="container bloc-md">
 
 		<div class="row voffset">
@@ -533,7 +533,7 @@
 		</div>
 	</div>
 </div>
-<div style="padding:20px;"></div> -->
+<div style="padding:20px;"></div>
 
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="form1-11" style="background-color: rgb(239, 239, 239);">
 
