Elixir quick fix associations fold

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 	<!-- Paste any valid HTML code here. The code will be inserted to the end of <head> section, right before </head> -->
 </head>
 <body>
-	<section class="engine"><a rel="external" href="#">Mobirise free mobile site builder
-	</a></section>
 	<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="ext_menu-4">
 		<div class="mbr-navbar__section mbr-section">
 			<div class="mbr-section__container container">
@@ -150,7 +148,8 @@
 </div>
 </div>
 </section-->
-<div style="padding:20px;"></div>
+<div style="padding-top:20px;">
+</div>
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="features1-9" style="">
 
 
@@ -335,16 +334,16 @@
 				</div>
 
 			</div>
-
-
-
-
-
-
-
 		</div>
 	</div>
 </section>
+
+<div class="row">
+	<div class="col-sm-12">
+		<img src="assets/images/associations.png" class="img-responsive">
+	</div>
+</div>
+
 <div style="padding:20px;"></div>
 
 <section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-parallax-background" id="content5-10" style="background-image: url(assets/images/bg3.jpg);">
@@ -357,8 +356,6 @@
 			</div>
 		</div>
 	</div>
-
-
 </section>
 
 <section class="mbr-section" id="header3-13">
